--- a/index.html
+++ b/index.html
@@ -6,28 +6,19 @@
     <title>Page Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
+    <style>
+    body{
+        background-color: pink;
+    }
+    </style>
 </head>
 <body>
-    <title>Contact Us</title>
-	</head>
-	<body>
-  <div style="text-align:right;">
-	<form action="location.html" method="POST">
-	First Name: <input type="text" name="firstName"/><br/><br/>
-	Last Name: <input type="text" name="lastName" /><br/><br/>
-	Email: <input type="text" name="email" /><br/><br/>
-	Type of License: <input type="radio" name="type" value="business" checked/>Business
-	<input type="radio" name="type" value="personal"/>Personal<br/><br/>
-	Reason: <select name="reason">
-	<option value="select a reason">Select a Reason</option>
-	<option value="software support"></option>
-	<option value="hardware support">Hardware Support</option>
-	<option value="information request">Information Request</option>
-	</select><br/><br/>
-    Additional Information: <textarea name="additional information"></textarea><br/><br/>
-	<input type="checkbox" name="terms" value="read terms of service"/>I have read the terms of service<br/><br/>
-	<input type="submit" value="Send Request" />
-	</form>
+    <h1>SLEEP OVER REQUEST FORM</h1>
+    <div Id="hello"></div>
+<input type="text" placeholder="TYPE IN YOUR REASON" id="name">
+
+    <button type="button" id="btn">ENTER</button>
+
+    <script src="java.js"></script>
 </body>
 </html>
